--- a/bcai_v1.9/package.json
+++ b/bcai_v1.9/package.json
@@ -650,6 +650,7 @@
       "version": "3.0.4"
     },
     "minimist": "^1.2.0",
+    "minimist-string": "^1.0.2",
     "mkdirp": {
       "dependencies": {
         "minimist": {
