--- a/bcai_v1.9/package.json
+++ b/bcai_v1.9/package.json
@@ -996,6 +996,7 @@
       "resolved": "https://registry.npmjs.org/to-arraybuffer/-/to-arraybuffer-1.0.1.tgz",
       "version": "1.0.1"
     },
+    "truffle-assertions": "^0.7.1",
     "tty-browserify": {
       "integrity": "sha512-C3TaO7K81YvjCgQH9Q1S3R3P3BtN3RIM8n+OvX4il1K1zgE8ZhI0op7kClgkxtutIE8hQrcrHBXvIheqKUUCxw==",
       "resolved": "https://registry.npmjs.org/tty-browserify/-/tty-browserify-0.0.1.tgz",
