--- a/bcai_v2.0/.gitignore
+++ b/bcai_v2.0/.gitignore
@@ -1,14 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/client/src/contracts
+#/node_modules
+#/client/src/contracts
 
 # testing
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
