--- a/bcai_v2.0/package.json
+++ b/bcai_v2.0/package.json
@@ -8,8 +8,13 @@
   },
   "dependencies": {
     "bignumber.js": "^8.0.2",
+    "hex2ascii": "0.0.3",
     "minimist": "^1.2.0",
-    "truffle-assertions": "^0.8.0"
+    "prop-types": "^15.7.2",
+    "react-notifications-component": "^1.1.1",
+    "tcomb-form": "^0.9.21",
+    "truffle-assertions": "^0.8.0",
+    "web3": "^1.0.0-beta.51"
   },
   "devDependencies": {
     "ganache-cli": "^6.3.0",
