--- a/bcai_v2.0/package.json
+++ b/bcai_v2.0/package.json
@@ -14,6 +14,7 @@
     "react-notifications-component": "^1.1.1",
     "tcomb-form": "^0.9.21",
     "truffle-assertions": "^0.8.0",
+    "truffle-hdwallet-provider": "^1.0.10",
     "web3": "^1.0.0-beta.51"
   },
   "devDependencies": {
