--- a/bcai_v2.0/client/package.json
+++ b/bcai_v2.0/client/package.json
@@ -13,6 +13,7 @@
     "tcomb-form": "^0.9.21",
     "truffle": "^4.1.14",
     "truffle-contract": "^4.0.0-beta.1",
+    "truffle-hdwallet-provider": "^1.0.10",
     "web3": "^1.0.0-beta.36",
     "websocket": "^1.0.28"
   },
