--- a/bcai_v2.0/client/package.json
+++ b/bcai_v2.0/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-notifications-component": "^1.0.1",
     "react-scripts": "^2.1.5",
+    "socket.io": "^2.2.0",
     "tcomb-form": "^0.9.21",
     "truffle": "^4.1.14",
     "truffle-contract": "^4.0.0-beta.1",
