--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules/*
+
 /bcai_v0.9/node_modules/*
 /bcai_v0.9/test/node_module/*
-/bcai_v0.9/build/contracts/*
+
 /bcai_v1.9/node_modules/*
 /bcai_v1.9/test/node_modules/*
-/bcai_v1.9/build/contracts/*
+
 /bcai_v2.0/node_modules/*
-/ML/localUser/node_modules/*
 /bcai_v2.0/client/node_modules/*
+
+/ML/localUser/node_modules/*
+
 /.vscode/*
 /quickTest/*
+/pepe/*
+
 
 
 # testing
