update gitignore to stable version, please align

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
+# version 1.0 stable
+# Taurus @2019
+# ignored the bulky node_modules folders
+# NOTE: keep the build folder in bcai_v2.0, which is used in npm scripts
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 
 /bcai_v0.9/node_modules/*
 /bcai_v0.9/test/node_module/*
+/bcai_v0.9/build
 
 /bcai_v1.9/node_modules/*
 /bcai_v1.9/test/node_modules/*
+/bcai_v1.9/build
 
 /bcai_v2.0/node_modules/*
 /bcai_v2.0/client/node_modules/*
@@ -17,16 +24,21 @@
 /quickTest/*
 /pepe/*
 
+# Deprecated Examples
+/MarksWill_UnitTest/
+/MarksWill_webpack/
+/metaCoin/
+/payroll/
+/petShop/
+/reactLab/
+
+
 
 
 # testing
-
-
 # production
 /build
-
 # misc
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
