--- a/bcai_v2.0/package.json
+++ b/bcai_v2.0/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "bignumber.js": "^8.0.2",
+    "fs": "0.0.1-security",
     "hex2ascii": "0.0.3",
+    "inquirer": "^7.0.0",
     "minimist": "^1.2.0",
     "prop-types": "^15.7.2",
     "react-notifications-component": "^1.1.1",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10",
     "tcomb-form": "^0.9.21",
     "truffle-assertions": "^0.8.0",
     "truffle-hdwallet-provider": "^1.0.10",
